src/z80asm/z80asm2/t/30-directive/expected/include_02.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/include_02.asm
Assembling t/30-directive/input/include_02.asm...
t/30-directive/input/include_02.asm:1:9: error: Expected filename after INCLUDE
    include no input file
            ^
